<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginPage">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Login"
        android:textSize="30sp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:id="@+id/textView"/>


    <TextView
        android:text="Email: "
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_marginStart="74dp"
        android:layout_marginTop="83dp"
        android:gravity="bottom"
        android:id="@+id/Email"/>

    <EditText
        android:id="@+id/etEmail"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:layout_marginTop="83dp"
        android:layout_toRightOf="@+id/Email"/>


    <TextView
        android:text="Password:"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_below="@+id/etEmail"
        android:layout_alignEnd="@+id/Email"
        android:gravity="bottom"
        android:id="@+id/password"/>

    <EditText
        android:id="@+id/etPassword"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@+id/password"
        android:textAlignment="center"
        android:layout_below="@+id/etEmail"
        />

    <TextView
        android:id="@+id/registerLink"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_below="@+id/etPassword"
        android:layout_alignEnd="@+id/password"
        android:layout_marginTop="1dp"
        android:layout_marginEnd="-197dp"
        android:gravity="center"

        android:onClick="openRegister"
        android:text="Don't have a profile? Register Now!" />

    <Button
        android:id="@+id/btnSubmit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Submit"
        android:layout_below="@+id/registerLink"
        android:layout_marginTop="20dp"
        android:layout_centerHorizontal="true"/>

</RelativeLayout>