<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PostInvitation">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Create a Posting!"
        android:textSize="30sp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:id="@+id/textView"/>


    <TextView
        android:text="Property Name: "
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_marginStart="74dp"
        android:layout_marginTop="83dp"
        android:gravity="bottom"
        android:id="@+id/textName"/>

    <EditText
        android:id="@+id/etName"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:textAlignment="center"
        android:layout_marginTop="83dp"
        android:layout_toRightOf="@+id/textName"/>

    <TextView
        android:text="Address: "
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_below="@+id/textName"
        android:layout_alignEnd="@+id/textName"
        android:gravity="bottom"
        android:id="@+id/address"/>

    <EditText
        android:id="@+id/etAddress"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:layout_toRightOf="@+id/address"
        android:textAlignment="center"
        android:layout_below="@+id/textName"
        />

    <TextView
        android:text="Price:"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_below="@+id/address"
        android:layout_alignEnd="@+id/address"
        android:gravity="bottom"
        android:id="@+id/Price"/>

    <EditText
        android:id="@+id/etPrice"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:layout_toRightOf="@+id/Price"
        android:textAlignment="center"
        android:layout_below="@+id/address"
        />

    <TextView
        android:text="Number of Bedrooms:"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_below="@+id/Price"
        android:layout_alignEnd="@+id/Price"
        android:gravity="bottom"
        android:id="@+id/numBeds"/>

    <EditText
        android:id="@+id/etNumBeds"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:layout_toRightOf="@+id/numBeds"
        android:textAlignment="center"
        android:layout_below="@+id/Price"
        />

    <TextView
        android:text="Number of Bathrooms:"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_below="@+id/numBeds"
        android:layout_alignEnd="@+id/numBeds"
        android:gravity="bottom"
        android:id="@+id/numBaths"/>

    <EditText
        android:id="@+id/etNumBaths"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:layout_toRightOf="@+id/numBaths"
        android:textAlignment="center"
        android:layout_below="@+id/numBeds"
        />

    <TextView
        android:text="Deadline Date:"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_below="@+id/numBaths"
        android:layout_alignEnd="@+id/numBaths"
        android:gravity="bottom"
        android:id="@+id/date"/>

    <EditText
        android:id="@+id/etDate"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:layout_toRightOf="@+id/date"
        android:textAlignment="center"
        android:layout_below="@+id/numBaths"
        />

    <Button
        android:id="@+id/btnSubmit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Submit"
        android:layout_below="@+id/date"
        android:layout_marginTop="20dp"
        android:layout_centerHorizontal="true"/>

</RelativeLayout>